tests/ui/for-loop-while/break-continue-in-loop-while-condition.stderr
error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/break-continue-in-loop-while-condition.rs:6:11
   |
LL |     while break {}
   |           ^^^^^ unlabeled `break` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/break-continue-in-loop-while-condition.rs:10:22
   |
LL |     while let true = break {}
   |                      ^^^^^ unlabeled `break` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/break-continue-in-loop-while-condition.rs:17:15
   |
LL |         while break {}
   |               ^^^^^ unlabeled `break` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/break-continue-in-loop-while-condition.rs:26:15
   |
LL |         while break {}
   |               ^^^^^ unlabeled `break` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/break-continue-in-loop-while-condition.rs:32:11
   |
LL |     while continue {}
   |           ^^^^^^^^ unlabeled `continue` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/break-continue-in-loop-while-condition.rs:36:22
   |
LL |     while let true = continue {}
   |                      ^^^^^^^^ unlabeled `continue` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/break-continue-in-loop-while-condition.rs:43:15
   |
LL |         while continue {}
   |               ^^^^^^^^ unlabeled `continue` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/break-continue-in-loop-while-condition.rs:52:15
   |
LL |         while continue {}
   |               ^^^^^^^^ unlabeled `continue` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/break-continue-in-loop-while-condition.rs:61:21
   |
LL |         break while continue {
   |                     ^^^^^^^^ unlabeled `continue` in the condition of a `while` loop

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0590`.
